[project]
name = "onnxslim"
version = "0.1.80"
description = "OnnxSlim: A Toolkit to Help Optimize Onnx Model"
authors = [{ name = "inisis", email = "desmond.yao@buaa.edu.cn" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "onnx",
    "onnxconverter-common",
    "sympy>=1.13.1",
    "packaging",
    "colorama",
    "ml_dtypes",
]

[project.urls]
homepage = "https://github.com/inisis/OnnxSlim"
issues = "https://github.com/inisis/OnnxSlim/issues"

[project.scripts]
onnxslim = "onnxslim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ["onnxslim/argparser.py"]

[tool.black]
exclude = '''
(
  onnxslim/argparser.py
)
'''

[dependency-groups]
dev = [
    "coverage",
    "pytest-cov",
    "onnx<=1.16.1 ; python_version<'3.10'",
    "onnx>=1.12.0,<=1.18.0 ; python_version>='3.10'",
    "onnxruntime<1.20.0 ; python_version<'3.10'",
    "onnxruntime>=1.20.0 ; python_version>='3.10'",
    "pytest",
    "pytest-xdist",
    "timm",
    "torch",
    "torchvision<=0.24",
    # required by torch but apparently not declared?
    "onnxscript ; python_version>='3.9'"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = [
    "tests/test_onnxslim.py",
    "tests/test_modelzoo.py",
    "tests/test_pattern_matcher.py",
    "tests/test_pattern_generator.py",
    "tests/test_dead_node_elimination.py",
    "tests/test_subexpression_elimination.py",
    "tests/test_elimination_patterns.py",
    "tests/test_fusion_patterns.py",
    "tests/test_cli_main.py",
    "tests/test_utils.py",
    "tests/test_symbolic_shape_inference.py",
    "tests/test_nvidia.py",
    "tests/test_shape_folding.py",
    "tests/test_coverage.py",
]
addopts = "-n auto" # enables pytest-xdist parallel workers

[tool.coverage.run]
branch = true
parallel = true
source = ["onnxslim"]
omit = [
    "onnxslim/third_party/*",
    "onnxslim/misc/*",
    "onnxslim/tests/conftest.py",
]
